--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,8 @@
 }
 $bg: peachpuff;
 $ff: "Alegreya";
-$ff2: "PlayfairDisplay";
+$ff2: "Playfair Display";
 $ff3: "Roboto";
-$ff4: "DancingScript";
+$ff4: "Dancing Script";
+$fSize: 24px;
+$tcolor: #56534c;
