--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,37 +1,122 @@
-@use "fonts";
 @use "variables";
 @use "mixins";
+@use "config";
+@import './fonts.scss';
 
-body {
-	margin: 0;
-	background-color: variables.$bg;
-	font-size: 25px;
-	color: var(--text);
-}
-h1 {
-	font-family: variables.$ff3;
-	font-weight: 400;
-	font-size: 48px;
-	text-align: center;
-}
-main {
-	font-family: variables.$ff2;
-	font-weight: 700;
-	font-size: 32px;
-	min-height: 450px;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	align-items: center;
-	img {
-		width: 100%;
-		display: block;
+.main-page {
+	min-height: 100vh;
+	background-image: url('../images/main_bg.png');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	padding-top: 80px;
+	&_inner {
+		position: relative;
+		z-index: 0;
+		max-width: 940px;
+		min-height: 890px;
+		margin: auto;
+		border: 1px solid transparent;
+		border-radius: 50%;
+		opacity: 0.7;
+		background-color: rgba(153, 54, 52, 0.0);
+		background-image: linear-gradient(0.0deg, #564f4c 0%, rgba(86,83,76,0.0) 101%);
+	}
+	&_content {
+		position: absolute;
+		top: 40%;
+		left: 0;
+		right: 0;
+		margin: auto;
+		z-index: 1;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		opacity: 1;
+	}
+	&_title {
+		font-family: variables.$ff2;
+		font-size: 92px;
+		line-height: 24px;
+		font-weight: 700;
+		letter-spacing: 0.075em;
+		text-shadow: 0px 1px 0px #3d3029;
+		color: #fff;
+		margin-bottom: 135px;
+	}
+	&_subtitle {
+		font-family: variables.$ff3;
+		font-size: 24px;
+		line-height: 36px;
+		font-weight: 400;
+		letter-spacing: 0.1em;
+		text-align: center;
+		text-shadow: 0px 1px 0px #3d3029;
+		color: #fff;
+		margin-bottom: 70px;
 	}
 }
-button {
-	font-family: variables.$ff2;
-	font-size: 18px;
+.header {
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	background-color: rgba(86,83,76,0.52);
+	&-inner {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		font-family: variables.$ff;
+		font-weight: 400;
+		font-size: 14px;
+		color: #fff;
+		margin: auto;
+		padding: 20px 0;
+	}
+	&-logo {
+		font-family: variables.$ff4;
+		font-weight: 400;
+		font-size: 60px;
+	}
 }
-ul {
-	list-style: url(../images/fb_2.svg);
+.menu-list {
+	display: flex;
+	font-family: variables.$ff;
+	font-weight: 400;
+	letter-spacing: .3em;
+	text-transform: uppercase;
+	&_item {
+		&:not(:last-child) {
+			margin-right: 85px;
+		}
+	}
+}
+.social-menu {
+	display: flex;
+}
+// Intro 
+.main {
+	padding-top: 60px;
+	background-image: url('../images/intro_bg.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.img-container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+.img-item {
+	display: flex;
+	flex: 0 0 50%;
+	max-width: 50%;
+	height: 250px;
+	img {
+		width: 295px;
+		object-fit: cover;
+		box-shadow: 0px 10px 10px 0px #000000;
+	}
 }
