--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,14 +3,15 @@
 @use "config";
 @import './fonts.scss';
 
+//Main page
 .main-page {
 	min-height: 100vh;
 	background-image: url('../images/main_bg.png');
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-	padding-top: 80px;
-	&_inner {
+	padding-top: 100px;
+	&__inner {
 		position: relative;
 		z-index: 0;
 		max-width: 940px;
@@ -22,7 +23,7 @@
 		background-color: rgba(153, 54, 52, 0.0);
 		background-image: linear-gradient(0.0deg, #564f4c 0%, rgba(86,83,76,0.0) 101%);
 	}
-	&_content {
+	&__content {
 		position: absolute;
 		top: 40%;
 		left: 0;
@@ -35,7 +36,7 @@
 		justify-content: center;
 		opacity: 1;
 	}
-	&_title {
+	&__title {
 		font-family: variables.$ff2;
 		font-size: 92px;
 		line-height: 24px;
@@ -45,7 +46,7 @@
 		color: #fff;
 		margin-bottom: 135px;
 	}
-	&_subtitle {
+	&__subtitle {
 		font-family: variables.$ff3;
 		font-size: 24px;
 		line-height: 36px;
@@ -57,6 +58,7 @@
 		margin-bottom: 70px;
 	}
 }
+// Header
 .header {
 	width: 100%;
 	position: fixed;
@@ -64,7 +66,7 @@
 	left: 0;
 	z-index: 100;
 	background-color: rgba(86,83,76,0.52);
-	&-inner {
+	&__inner {
 		display: flex;
 		justify-content: space-evenly;
 		align-items: center;
@@ -75,19 +77,22 @@
 		margin: auto;
 		padding: 20px 0;
 	}
-	&-logo {
+	&__logo {
 		font-family: variables.$ff4;
 		font-weight: 400;
 		font-size: 60px;
 	}
 }
-.menu-list {
-	display: flex;
-	font-family: variables.$ff;
-	font-weight: 400;
-	letter-spacing: .3em;
-	text-transform: uppercase;
-	&_item {
+// Menu
+.menu {
+	&__list {
+		display: flex;
+		font-family: variables.$ff;
+		font-weight: 400;
+		letter-spacing: .3em;
+		text-transform: uppercase;
+	}
+	&__item {
 		&:not(:last-child) {
 			margin-right: 85px;
 		}
@@ -98,28 +103,129 @@
 }
 // Intro 
 .main {
-	padding-top: 60px;
 	background-image: url('../images/intro_bg.png');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-.img-container {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-.img-item {
-	display: flex;
-	flex: 0 0 50%;
-	max-width: 50%;
-	height: 250px;
-	&:not(:last-child) {
-		margin-bottom: 20px;
+.cakes {
+	padding: 60px 0 90px;
+	&__item:not(:last-child) {
+		padding-right: 70px;
 	}
-	img {
-		width: 295px;
-		object-fit: cover;
-		box-shadow: 0px 10px 10px 0px #000000;
+	&__title {
+		margin-bottom: 15px;
+	}
+	&__subtitle {
+		margin-bottom: 60px;
+	}
+	&__text {
+		margin-bottom: 45px;
+	}
+	&__content {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	&__paragraph {
+		font-family: variables.$ff;
+		font-size: 24px;
+		line-height: 30px;
+		font-weight: 700;
+		letter-spacing: 0.025em;
+		color: #56534c;
+		margin-bottom: 40px;
+	}
+	&__icon {
+		border: 4px solid #fff;
+		border-radius: 50%;
+		box-shadow: 0px 7px 9px 0px rgba(0,0,0,0.93);
+	}
+	&__author {
+		font-family: variables.$ff;
+		font-size: 24px;
+		line-height: 30px;
+		font-weight: 400;
+		letter-spacing: 0.025em;
+		color: #56534c;
+		margin: 0 40px;
+		padding: 0 15px;
+		position: relative;
+		&::before {
+			content: '';
+			width: 100%;
+			height: 1px;
+			background-color: #d7d5ca;
+			position: absolute;
+			top: -20px;
+			left: 0;
+			right: 0;
+			z-index: 1;
+		}
+		&::after {
+			content: '';
+			width: 100%;
+			height: 1px;
+			background-color: #d7d5ca;
+			position: absolute;
+			bottom: -20px;
+			left: 0;
+			right: 0;
+			z-index: 1;
+		}
+	}
+	&__quote {
+		font-family: variables.$ff4;
+		font-size: 38px;
+		line-height: 30px;
+		font-weight: 400;
+		letter-spacing: 0.025em;
+		color: #a47d5e;
+		position: relative;
+		&::before {
+			content: "\201C";
+			font-size: 115px;
+			color: rgba(86, 83, 76, .5);
+			position: absolute;
+			top: 0;
+			left: -45px;
+			z-index: 1;
+		}
+		&::after {
+			content: "\201E";
+			font-size: 115px;
+			color: rgba(86, 83, 76, .5);
+			position: absolute;
+			bottom: 0;
+			right: -40px;
+			z-index: 1;
+		}
+	}
+	&__images {
+		display: flex;
+		flex-wrap: wrap;
+		position: relative;
+		&_title {
+			position: absolute;
+			top: 42%;
+			left: 31%;
+			z-index: 1;
+		}
+	}
+	&__image {
+		display: flex;
+		flex: 0 0 45%;
+		max-width: 45%;
+		height: 250px;
+		&:not(:last-child) {
+			margin-bottom: 20px;
+		}
+		img {
+			width: 295px;
+			object-fit: cover;
+			box-shadow: 0px 10px 10px 0px #000000;
+			outline: 5px solid #fff;
+			outline-offset: -13px;
+		}
 	}
 }
