--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -20,6 +20,7 @@
 	font-family: "Roboto";
 	font-display: swap;
 	src: url("../fonts/Roboto-Regular.ttf") format("ttf");
+	font-weight: 400;
 	font-style: normal;
  }
  
